# chatterbox-fastapi

./: .gitignore  README.md  configure.py  main.py  pyproject.toml
src/tts_api/core/: config.py  exceptions.py  models.py
src/tts_api/services/: audio_analyzer.py  audio_processor.py  text_processing.py  tts_service.py  validation.py
src/tts_api/services/alignment/: api_provider.py  interface.py  manager.py
src/tts_api/tts_engines/: base.py  chatterbox_engine.py  fish_speech_engine.py
src/tts_api/utils/: pyphen_cache.py  text_processing.py  torch_utils.py
tests/core/: test_text_processing.py
tests/services/: test_text_processing.py  test_tts_service.py
tools/: validate_audio_files.py
